Image tag updates

--- a/jenkins/app-deployments.yaml
+++ b/jenkins/app-deployments.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sample-app01
-        image: vinish86/springboot:42
+        image: vinish86/springboot:dev
         ports:
         - containerPort: 8080
 ---
