--- a/jenkins/app-deployments.yaml
+++ b/jenkins/app-deployments.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: sample-app01
         image: vinish86/springboot:dev
+        imagePullPolicy: "Always"
         ports:
         - containerPort: 8080
 ---
